; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/common/extr_multithread.c_on_pong.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/common/extr_multithread.c_on_pong.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@worker_thread = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @on_pong to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_pong(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  br label %5

5:                                                ; preds = %10, %2
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @h2o_linklist_is_empty(i32* %6)
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  br i1 %9, label %10, label %14

10:                                               ; preds = %5
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @pop_empty_message(i32* %11)
  %13 = call i32 @send_empty_message(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @worker_thread, i32 0, i32 0))
  br label %5

14:                                               ; preds = %5
  ret void
}

declare dso_local i32 @h2o_linklist_is_empty(i32*) #1

declare dso_local i32 @pop_empty_message(i32*) #1

declare dso_local i32 @send_empty_message(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
